# blog-dapp-solana

./: .gitignore  Anchor.toml  README.md  asset-manifest.json  copy_idl.js  index.html  package.json  pnpm-lock.yaml
app/: craco.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
app/src/: App.tsx  idl.json  index.css  index.tsx  react-app-env.d.ts  router.tsx
app/src/assets/: undraw_Online_re_x00h.svg:Zone.Identifier
app/src/components/: Button.tsx  EditPost.tsx  EditProfile.tsx  InterestingSkeleton.tsx  PostCard.tsx  PostForm.tsx  SponsoredSkeleton.tsx
app/src/context/: Blog.tsx
app/src/context/functions/: getPostById.ts  getPosts.ts  getUser.ts  initBlog.ts
app/src/functions/: displayKey.ts  getAvatarUrl.ts  getRandomName.ts
app/src/pages/: dashboard.tsx
programs/blog-sol/: Cargo.toml
programs/blog-sol/src/: lib.rs
static/css/: main.d06d5f51.chunk.css  main.d06d5f51.chunk.css.map
static/js/: 2.3ae2eaeb.chunk.js  2.3ae2eaeb.chunk.js.LICENSE.txt  main.cb4e4ebc.chunk.js  main.cb4e4ebc.chunk.js.map  runtime-main.5c955279.js  runtime-main.5c955279.js.map
tests/: blog-sol.js
tests/functions/: createBlog.js  createPost.js  createUser.js
